# work-doiwic-backend

./: README.md  libllm.py  llm.py  main.py  pyproject.toml
models/: motivation_pipeline.pkl
routers/: constraints.py  context.py  current_state.py  execution.py  motivation.py  objectives.py  profile.py  resources.py  role.py
training/: training.py
