[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
